Removed --enable-preview switches.